fix scrolling on ios

--- a/app/views/styles/main.css
+++ b/app/views/styles/main.css
@@ -2,6 +2,7 @@ body,html {
   background: #f9f9f9; 
   max-width: 100%;
   overflow-x: hidden;
+	-webkit-overflow-scrolling: touch;    
   padding: 0; 
 }
 a:link, a:visited, a:hover, a:focus {
